@@ -2,6 +2,10 @@ Package: listenv
 ================
 
 Version: 0.4.0-9000 [2015-10-07]
+o Add support for assigning elements when creating list environment
+  similarly how to lists work, e.g. x <- listenv(a=1, b=2).
+o DEPRECATED: Deprecated x <- listenv(length=n). Instead use 
+  x <- listenv(); length(x) <- n.
 o Add support for growing or shrinking a list environment using
   length(x) <- n.
 o Add unlist() for list environments.
